opaque background added to login form

--- a/practice.html
+++ b/practice.html
@@ -15,7 +15,8 @@
             </div>
 
             <div class="FY">
-                <h1>Final Year</h1>
+                <h1>DataSource</h1>
+                <h2>The drug approval date dashboard</h2>
 
                 <div class="button">
                     <a href="" class="btn btn-one">Watch Video</a>
