--- a/web_contents/practicecontacts.html
+++ b/web_contents/practicecontacts.html
@@ -1,6 +1,7 @@
 <!Doctype html>
 <html>
 <!--My Current homepage-->
+
 <head>
     <title>Practice Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA"
@@ -21,12 +22,12 @@
     <div class="container-fluid">
         <div class="row back-colour">
             <div class="col-sm-12">
-                <h1>Data Source</h1>
+                <h1>Contact Us</h1>
             </div>
         </div>
         <div class="row back-colour">
             <div class="col-sm-12">
-                <h2>The drug approval date dashboard</h2>
+                <h2>Questions and queries welcome</h2>
             </div>
         </div>
         <div class="row back-colour">
@@ -49,52 +50,21 @@
 
             </div>
         </div>
-        <div class="container login-container">
-            <div class="row">
-                <div class="col-md-6 login-form">
-                    <h2>Login</h2>
-                    <form>
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="username" placeholder="Username" value="" />
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" name="password" placeholder="Password" value="" />
-                        </div>
-                        <div class="form-group">
-                            <!--<input type="submit" class="btnSubmit" value="Login" />-->
-                            <button class="btn btn-sm my-button" type="button">Login</button>
-                        </div>
-                        <div class="form-group">
-                            <a href="#">
-                                <p>Forgotten password? </p>
-                            </a>
-                            <p class="register"> Not Registered? <a href="#"> Register </a></p>
-                        </div>
-                    </form>
-                </div>
-                <div class="col-md-6 register-form" method="POST">
-                    <h2>Register</h2>
-                    <form>
-                        <input type="text" class="form-control form-group" name="username" placeholder="Username" />
 
-                        <input type="text" class="form-control form-group" name="email" placeholder="Email" />
-
-                        <input type="password" class="form-control form-group" name="password" placeholder="Password" />
-
-                        <input type="password" class="form-control form-group" name="c-password" placeholder="Confirm Password" />
-
-                        <input type="text" class="form-control form-group" name="company" placeholder="Company" />
-
-                        <button class=" form-group btn btn-sm my-button2 " type="submit">Register</button>
-                        <!--<input type="submit" class="btnSubmit" value="Register" />-->
-
-
-                        <p class="register form-group">Already Registered? <a href="#"> Login </a></p>
-
-                    </form>
-                </div>
+        <div class="row">
+            <div class="col-sm-6 dropdown">
+                <iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/view?zoom=13&center=51.4414,-0.9418&key=AIzaSyD9c7T8kAXsRcQVgc8MGy3RaaEgJAfZc6c"></iframe>
+            </div>
+            <div class="col-sm-5 dropdown">
+                <h4>Location</h4>
+                <p>The project was developed at th University of Reading.</p>
+                <h4>Developer Details</h4>
+                <p>Rhian Taylor, a final year Computer Science Bsc student, developed DataSource in order to target the automated competitive intelligence gathering gap in the Pharmaceutical industry.</p>
+                <h4>Contact Details</h4>
+                <p>E-mail: r.c.taylor@student.reading.ac.uk</p>
             </div>
         </div>
+
 
     </div>
 </body>
