--- a/web_contents/practicecontacts.html
+++ b/web_contents/practicecontacts.html
@@ -52,15 +52,15 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-6 dropdown">
+            <div class="col-sm-6 dropdown ">
                 <iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/view?zoom=13&center=51.4414,-0.9418&key=AIzaSyD9c7T8kAXsRcQVgc8MGy3RaaEgJAfZc6c"></iframe>
             </div>
-            <div class="col-sm-5 dropdown">
-                <h4>Location</h4>
+            <div class="col-sm-5 dropdown box-container-thing">
+                <h3>Location</h3>
                 <p>The project was developed at th University of Reading.</p>
-                <h4>Developer Details</h4>
+                <h3>Developer Details</h3>
                 <p>Rhian Taylor, a final year Computer Science Bsc student, developed DataSource in order to target the automated competitive intelligence gathering gap in the Pharmaceutical industry.</p>
-                <h4>Contact Details</h4>
+                <h3>Contact Details</h3>
                 <p>E-mail: r.c.taylor@student.reading.ac.uk</p>
             </div>
         </div>
