--- a/web_contents/practicecontacts.html
+++ b/web_contents/practicecontacts.html
@@ -62,6 +62,7 @@
                 <p>Rhian Taylor, a final year Computer Science Bsc student, developed DataSource in order to target the automated competitive intelligence gathering gap in the Pharmaceutical industry.</p>
                 <h3>Contact Details</h3>
                 <p>E-mail: r.c.taylor@student.reading.ac.uk</p>
+                <a href="https://www.linkedin.com/in/rhian-taylor"><img  src="linkedin-logo-copy.png" alt="find me on LinkedIn" width="20" height="20"></a>
             </div>
         </div>
 
