--- a/web_contents/practice.html
+++ b/web_contents/practice.html
@@ -41,7 +41,7 @@
                         <div class="navbar-nav">
                             <a class="nav-item nav-link active" href="practice.html">Home <span class="sr-only">(current)</span></a>
                             <a class="nav-item nav-link" href="practicefeatures.html">Features</a>
-                            <a class="nav-item nav-link" href="information.html">Information</a>
+                            <a class="nav-item nav-link" href="practiceinformation.html">Information</a>
                             <a class="nav-item nav-link" href="practicecontacts.html">Contact</a>
                         </div>
                     </div>
