--- a/web_contents/practiceinformation.html
+++ b/web_contents/practiceinformation.html
@@ -63,28 +63,20 @@
                         alt="" />
                 </div>
                 <div class="col-md-6 box-container-thing">
-                    <h2>Find rewarding projects</h2>
-                    <h3 >GetLance is a great place to find more clients, and to run and grow your own
-                        freelance business.</h3>
-                    <p >Freedom to work on ideal projects. On GetLance, you run your own business and
-                        choose your own clients and projects. Just complete your profile and we’ll highlight ideal
-                        jobs. Also search projects, and respond to client invitations.
-                        Wide variety and high pay. Clients are now posting jobs in hundreds of skill categories, paying
-                        top price for great work.
-                        More and more success. The greater the success you have on projects, the more likely you are to
-                        get hired by clients that use GetLance.</p>
+                    <h2>Gap in the market</h2>
+                    <h3 >Why there is a need for DataSource.</h3>
+                    <p >Inspiration from placement year - reg affairs.
+                        Competitive Intelligence,
+                        Open Source data,
+                        Automation.
+                    </p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 box-container-thing">
-                    <h2>Get hired quickly</h2>
-                    <h3>GetLance makes it easy to connect with clients and begin doing great work.</h3>
-                    <p >Streamlined hiring. GetLance’s sophisticated algorithms highlight projects
-                        you’re a great fit for.
-                        Top Rated and Rising Talent programs. Enjoy higher visibility with the added status of
-                        prestigious programs.
-                        Do substantial work with top clients. GetLance pricing encourages freelancers to use GetLance
-                        for repeat relationships with their clients.</p>
+                    <h2>Project Proposal</h2>
+                    <h3>DataSource - the concept.</h3>
+                    <p >Web application, automated gathering, storing, visulaising.</p>
                 </div>
                 <div class="col-md-6 how-img">
                     <img src="https://image.ibb.co/cHgKnU/Work_Section2_freelance_img2.png" class="rounded-circle img-fluid"
@@ -97,26 +89,16 @@
                         alt="" />
                 </div>
                 <div class="col-md-6 box-container-thing">
-                    <h2>Work efficiently, effectively.</h2>
-                    <h3>With GetLance, you have the freedom and flexibility to control when, where,
-                        and how you work. Each project includes an online workspace shared by you and your client,
-                        allowing you to:</h3>
-                    <p>Send and receive files. Deliver digital assets in a secure environment.
-                        Share feedback in real time. Use GetLance Messages to communicate via text, chat, or video.
-                        Use our mobile app. Many features can be accessed on your mobile phone when on the go.</p>
+                    <h2>Placeholder</h2>
+                    <h3>Placeholder</h3>
+                    <p>Filler text</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 box-container-thing">
-                    <h2>Get paid on time</h2>
-                    <h3>All projects include GetLance Payment Protection — helping ensure that you
-                        get paid for all work successfully completed through the freelancing website.</h3>
-                    <p>All invoices and payments happen through GetLance. Count on a simple and
-                        streamlined process.
-                        Hourly and fixed-price projects. For hourly work, submit timesheets through GetLance. For
-                        fixed-price jobs, set milestones and funds are released via GetLance escrow features.
-                        Multiple payment options. Choose a payment method that works best for you, from direct deposit
-                        or PayPal to wire transfer and more.</p>
+                    <h2>Placeholder</h2>
+                    <h3>Placeholder</h3>
+                    <p>Filler text</p>
                 </div>
                 <div class="col-md-6 how-img">
                     <img src="https://image.ibb.co/gQ9iE9/Work_Section2_freelance_img4.png" class="rounded-circle img-fluid"
