--- a/web_contents/practiceinformation.html
+++ b/web_contents/practiceinformation.html
@@ -64,8 +64,8 @@
                 </div>
                 <div class="col-md-6 box-container-thing">
                     <h2>Gap in the market</h2>
-                    <h3 >Why there is a need for DataSource.</h3>
-                    <p >Inspiration from placement year - reg affairs.
+                    <h3>Why there is a need for DataSource.</h3>
+                    <p>Inspiration from placement year - reg affairs.
                         Competitive Intelligence,
                         Open Source data,
                         Automation.
@@ -76,7 +76,7 @@
                 <div class="col-md-6 box-container-thing">
                     <h2>Project Proposal</h2>
                     <h3>DataSource - the concept.</h3>
-                    <p >Web application, automated gathering, storing, visulaising.</p>
+                    <p>Web application, automated gathering, storing, visulaising.</p>
                 </div>
                 <div class="col-md-6 how-img">
                     <img src="https://image.ibb.co/cHgKnU/Work_Section2_freelance_img2.png" class="rounded-circle img-fluid"
@@ -89,15 +89,15 @@
                         alt="" />
                 </div>
                 <div class="col-md-6 box-container-thing">
-                    <h2>Placeholder</h2>
-                    <h3>Placeholder</h3>
+                    <h2>Development Choices and Method</h2>
+                    <h3>DataSource influences and approaches.</h3>
                     <p>Filler text</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 box-container-thing">
-                    <h2>Placeholder</h2>
-                    <h3>Placeholder</h3>
+                    <h2>Next Steps</h2>
+                    <h3>Future plans for DataSource.</h3>
                     <p>Filler text</p>
                 </div>
                 <div class="col-md-6 how-img">
@@ -105,6 +105,17 @@
                         alt="" />
                 </div>
             </div>
+            <div class="row">
+                    <div class="col-md-6 how-img">
+                        <img src="https://image.ibb.co/ctSLu9/Work_Section2_freelance_img3.png" class="rounded-circle img-fluid"
+                            alt="" />
+                    </div>
+                    <div class="col-md-6 box-container-thing">
+                        <h2>Competitors</h2>
+                        <h3>Why choose DataSource, specifically?</h3>
+                        <p>Filler text</p>
+                    </div>
+                </div>
         </div>
     </div>
 </body>
