--- a/web_contents/oldHome.html
+++ b/web_contents/oldHome.html
@@ -1,82 +1,4 @@
-<!DOCTYPE html>
-<html>
-<div class="bg">
-
-    <head>
-        <title>Home page</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
-    </head>
-
-    <body>
-        <header>
-            <div class="menu">
-                <ul class="main-nav">
-                    <li class="active"><a href="home.html">HOME</a></li>
-                    <li><a href="information.html">INFORMATION</a></li>
-                    <li><a href="contact.html">CONTACT US</a></li>
-                </ul>
-            </div>
-
-
-            <div class="FY">
-                <h1>DataSource</h1>
-                <h2>The drug approval date dashboard</h2>
-
-
-
-                <div class="login-page">
-                    <div class="button">
-                        <a href="" class="btn btn-one">Watch Video</a>
-                        <a href="features.html" class="btn btn-two">Find out more</a>
-                    </div>
-                    <div class="form">
-                        <form class="register-form" method="POST">
-                            <h2>Sign Up</h2>
-                            <p>Username</p>
-                            <input type="text" name="username" placeholder="Enter Username">
-                            <p>Password</p>
-                            <input type="password" name="password" placeholder="Enter Password">
-                            <p>Confirm Password</p>
-                            <input type="password" name="c-password" placeholder="Confirm Password">
-                            <p>E-mail</p>
-                            <input type="email" name="email" placeholder="Enter E-mail">
-                            <p>Company</p>
-                            <input type="text" name="company" placeholder="Enter Company">
-                            <!--<input type="submit">-->
-                            <button>Create</button>
-                            <p class="register"> Already Registered? <a href="#"> Login </a></p>
-                        </form>
-
-                        <form class="login-form" action="welcome.html">
-                            <h2>Login</h2>
-                            <p>Username</p>
-                            <input type="text" name="" placeholder="Enter Username">
-                            <p>Password</p>
-                            <input type="password" name="" placeholder="Enter Password">
-                            <button>Login</button>
-                            <p class="register"> Not Registered? <a href="#"> Register </a></p>
-                            <a href="#">Forgotten your password?</a>
-
-                        </form>
-                    </div>
-                </div>
-            </div>
-
-            <script src='https://code.jquery.com/jquery-3.3.1.min.js'></script>
-
-            <script>
-                $(".register a").on('click', function () {
-                    $("form").animate({
-                        height: "toggle",
-                        opacity: "toggle"
-                    }, "slow");
-                });
-            </script>
-
-
-        </header>
-
-    </body>
-</div>
-
-</html>
+{% extends "layout.html" %}
+{% block content %}
+<p>Hello World</p>
+{% endblock content%}
