email type changed

--- a/web_contents/practice.html
+++ b/web_contents/practice.html
@@ -79,7 +79,7 @@
 
                         <input type="text" class="form-control form-group" name="l_name" placeholder="Last Name" required minlength="2" maxlength="20" value="ab" />
 
-                        <input type="text" class="form-control form-group" name="email" placeholder="Email" required value="a@a.com"/>
+                        <input type="email" class="form-control form-group" name="email" placeholder="Email" required value="a@a.com"/>
 
                         <input type="password" class="form-control form-group" name="password" id="pass1" onkeyup="checkPasswordMatch();" placeholder="Password" required minlength="6" maxlength="12"value="abc123"/>
 
