--- a/web_contents/practice.html
+++ b/web_contents/practice.html
@@ -21,7 +21,7 @@
     <div class="container-fluid">
         <div class="row back-colour">
             <div class="col-sm-12">
-                <h1>Data Source</h1>
+                <h1>DataSource</h1>
             </div>
         </div>
         <div class="row back-colour">
@@ -70,9 +70,9 @@
                 <div class="col-md-6 register-form collapse" id="register-form" >
                     <h2>Register</h2>
                     <form action="/register" method="POST">
-                        <input type="text" class="form-control form-group" name="f_name" placeholder="First Name" required minlength="2" maxlength="20" value="ab" />
+                        <input type="varchar" class="form-control form-group" name="f_name" placeholder="First Name" required minlength="2" maxlength="20" value="ab" />
 
-                        <input type="text" class="form-control form-group" name="l_name" placeholder="Last Name" required minlength="2" maxlength="20" value="ab" />
+                        <input type="varchar" class="form-control form-group" name="l_name" placeholder="Last Name" required minlength="2" maxlength="20" value="ab" />
 
                         <input type="email" class="form-control form-group" name="email" placeholder="Email" required value="a@a.com"/>
 
