--- a/web_contents/welcome.html
+++ b/web_contents/welcome.html
@@ -59,8 +59,8 @@
                     data: {
                         labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
                         datasets: [{
-                            label: '# of Votes',
-                            data: $.getJSON("FDA_Module/parsed.json"),
+                            label: '# of Approvals',
+                            data: [12, 19, 3, 5, 2, 3],
                             backgroundColor: [
                                 'rgba(255, 99, 132, 0.2)',
                                 'rgba(54, 162, 235, 0.2)',
