--- a/web_contents/practiceinformation.html
+++ b/web_contents/practiceinformation.html
@@ -59,16 +59,13 @@
         <div class="how-section1">
             <div class="row">
                 <div class="col-md-6 how-img">
-                    <img src="https://image.ibb.co/dDW27U/Work_Section2_freelance_img1.png" class="rounded-circle img-fluid"
+                    <img src="maket gap.jpeg" class="rounded-circle img-fluid"
                         alt="" />
                 </div>
                 <div class="col-md-6 box-container-thing">
                     <h2>Gap in the market</h2>
                     <h3>Why there is a need for DataSource.</h3>
-                    <p>Inspiration from placement year - reg affairs.
-                        Competitive Intelligence,
-                        Open Source data,
-                        Automation.
+                    <p>The pharmaceutical industry is one of the most dynamic sectors of world economics. In 2015 the Pharmaceuticals and Biotechnology sector ranked first by overall research and development(R&D). Despite this investment, the sector is ranked 5th for net sales growth effectively illustrating the nature of the Pharmaceutical industry. The market is unstable and there is intensive competition between companies across geographies. 
                     </p>
                 </div>
             </div>
@@ -76,22 +73,23 @@
                 <div class="col-md-6 box-container-thing">
                     <h2>Project Proposal</h2>
                     <h3>DataSource - the concept.</h3>
-                    <p>Web application, automated gathering, storing, visulaising.</p>
+                    <p>The aim of this project is to automate the gathering, storage and reporting of open source drug approval data for the use of Regulatory Affairs teams in the Pharmaceutical industry for competitive intelligence analysis. </p>
                 </div>
                 <div class="col-md-6 how-img">
-                    <img src="https://image.ibb.co/cHgKnU/Work_Section2_freelance_img2.png" class="rounded-circle img-fluid"
+                    <img src="aim.jpeg" class="rounded-circle img-fluid"
                         alt="" />
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 how-img">
-                    <img src="https://image.ibb.co/ctSLu9/Work_Section2_freelance_img3.png" class="rounded-circle img-fluid"
+                    <img src="python.jpeg" class="rounded-circle img-fluid"
                         alt="" />
                 </div>
                 <div class="col-md-6 box-container-thing">
                     <h2>Development Choices and Method</h2>
                     <h3>DataSource influences and approaches.</h3>
-                    <p>Filler text</p>
+                    <p>DataSource is a niche solution targeting a user base and area that our competitors are not. The system is coded in Python as it is popular for data analyisis and web development, also it has a fast development speed. The version control was done through GitHub. </p>
+                    <p>DataSource is using a combination of web scraping and text classification to get drug approval data from the FDA website and assign a therapy group to each drug!</p>
                 </div>
             </div>
             <div class="row">
@@ -101,19 +99,21 @@
                     <p>Filler text</p>
                 </div>
                 <div class="col-md-6 how-img">
-                    <img src="https://image.ibb.co/gQ9iE9/Work_Section2_freelance_img4.png" class="rounded-circle img-fluid"
+                    <img src="future.jpeg" class="rounded-circle img-fluid"
                         alt="" />
                 </div>
             </div>
             <div class="row">
                     <div class="col-md-6 how-img">
-                        <img src="https://image.ibb.co/ctSLu9/Work_Section2_freelance_img3.png" class="rounded-circle img-fluid"
+                        <img src="compete.jpeg" class="rounded-circle img-fluid"
                             alt="" />
                     </div>
                     <div class="col-md-6 box-container-thing">
                         <h2>Competitors</h2>
                         <h3>Why choose DataSource, specifically?</h3>
-                        <p>Filler text</p>
+                        <p>Splunk software allows the collection and analysis of big data to give insights into operational performance and business results. Currently Splunk is used in several industries, including healthcare, for which the company provides case studies on how the solution is used. There are three healthcare case studies describing how Splunk has been applied to industry problems regarding data gathering and analytics.</p>
+                        <p>SAS are a world leading data analytics solution employing data mining, statistical analysis, text analytics and optimization to allow users to access, prepare and model data to improve the return on analytics investment. SAS is also used in the healthcare industry to provide insights into data.</p>
+                         
                     </div>
                 </div>
         </div>
