front end tweaks

--- a/web_contents/practice.html
+++ b/web_contents/practice.html
@@ -23,7 +23,7 @@
                 <div class="col-sm-1"></div>
             <div class="col-sm-10">
                 
-                <img src="logo2.png" alt="DataSource">
+                <img src="logo2.png" alt="DataSource" height =90% width=90%>
             </div>
         </div>
         <div class="row back-colour">
@@ -72,15 +72,15 @@
                 <div class="col-md-6 register-form collapse" id="register-form" >
                     <h2>Register</h2>
                     <form action="/register" method="POST">
-                        <input type="varchar" class="form-control form-group" name="f_name" placeholder="First Name" required minlength="2" maxlength="20" value="ab" />
+                        <input type="varchar" class="form-control form-group" name="f_name" placeholder="First Name" required minlength="2" maxlength="20" value="" />
 
-                        <input type="varchar" class="form-control form-group" name="l_name" placeholder="Last Name" required minlength="2" maxlength="20" value="ab" />
+                        <input type="varchar" class="form-control form-group" name="l_name" placeholder="Last Name" required minlength="2" maxlength="20" value="" />
 
-                        <input type="email" class="form-control form-group" name="email" placeholder="Email" required value="a@a.com"/>
+                        <input type="email" class="form-control form-group" name="email" placeholder="Email" required value=""/>
 
-                        <input type="password" class="form-control form-group" name="password" id="pass1" onkeyup="checkPasswordMatch();" placeholder="Password" required minlength="6" maxlength="12"value="abc123"/>
+                        <input type="password" class="form-control form-group" name="password" id="pass1" onkeyup="checkPasswordMatch();" placeholder="Password" required minlength="6" maxlength="12"value=""/>
 
-                        <input type="password" class="form-control form-group"   name="c-password" id="pass2" onkeyup="checkPasswordMatch();" placeholder="Confirm Password" required minlength="6" maxlength="12"value="abc123" />
+                        <input type="password" class="form-control form-group"   name="c-password" id="pass2" onkeyup="checkPasswordMatch();" placeholder="Confirm Password" required minlength="6" maxlength="12"value="" />
                         
                         <div class="collapse form-group" id="divCheckPasswordMatch"><p class="alert alert-danger">Passwords do not match</p></div>
 
