--- a/web_contents/practicecontacts.html
+++ b/web_contents/practicecontacts.html
@@ -21,13 +21,22 @@
 <body>
     <div class="container-fluid">
         <div class="row back-colour">
-            <div class="col-sm-12">
-                <h1>Contact Us</h1>
-            </div>
+            <div class="col-sm-1"></div>
+        <div class="col-sm-10">
+            
+            <img src="logo2.png" alt="DataSource" height =90% width=90%>
         </div>
+    </div>
+    <div class="row back-colour">
+        <div class="col-sm-1">
+            
+        </div>
+    </div>
+
+</div>
         <div class="row back-colour">
             <div class="col-sm-12">
-                <h2>Questions and queries welcome</h2>
+                <h2>Contact Us</h2>
             </div>
         </div>
         <div class="row back-colour">
