--- a/web_contents/practicefeatures.html
+++ b/web_contents/practicefeatures.html
@@ -23,13 +23,22 @@
 <body>
     <div class="container-fluid back-colour">
         <div class="row back-colour">
-            <div class="col-sm-12">
-                <h1>Features</h1>
-            </div>
+            <div class="col-sm-1"></div>
+        <div class="col-sm-10">
+            
+            <img src="logo2.png" alt="DataSource" height =90% width=90%>
         </div>
+    </div>
+    <div class="row back-colour">
+        <div class="col-sm-1">
+            
+        </div>
+    </div>
+
+</div>
         <div class="row back-colour">
             <div class="col-sm-12">
-                <h2>The 3 key aspects of DataSource</h2>
+                <h2>System Features</h2>
             </div>
         </div>
 
