--- a/web_contents/practiceinformation.html
+++ b/web_contents/practiceinformation.html
@@ -23,10 +23,19 @@
 <body>
     <div class="container-fluid back-colour">
         <div class="row back-colour">
-            <div class="col-sm-12">
-                <h1>Information</h1>
-            </div>
+            <div class="col-sm-1"></div>
+        <div class="col-sm-10">
+            
+            <img src="logo2.png" alt="DataSource" height =90% width=90%>
         </div>
+    </div>
+    <div class="row back-colour">
+        <div class="col-sm-1">
+            
+        </div>
+    </div>
+
+</div>
         <div class="row back-colour">
             <div class="col-sm-12">
                 <h2>Information about the development of DataSource</h2>
