--- a/web_contents/practice.html
+++ b/web_contents/practice.html
@@ -84,7 +84,7 @@
                         
                         <div class="collapse form-group" id="divCheckPasswordMatch"><p class="alert alert-danger">Passwords do not match</p></div>
 
-                        <input type="text" class="form-control form-group" name="company" placeholder="Company" required minlength="2" maxlength="20" value="ab"/>
+                        <input type="text" class="form-control form-group" name="company" placeholder="Company" required minlength="2" maxlength="20" value=""/>
 
                         <button class="form-group btn btn-sm my-button2 " id="register-button" >Register</button>
                         <!--<input type="submit" class="btnSubmit" value="Register" />-->
