--- a/web_contents/welcome.html
+++ b/web_contents/welcome.html
@@ -29,7 +29,7 @@
                         <div class="col-sm-1"></div>
                     <div class="col-sm-10">
                         
-                        <img src="logo2.png" alt="DataSource">
+                        <img src="logo2.png" alt="DataSource" height =90% width=90%>
                     </div>
                 </div>
                 <div class="row back-colour">
@@ -59,7 +59,7 @@
                                     class="sr-only">(current)</span></a>
                             <a class="nav-item nav-link" href=""></a>
                             <a class="nav-item nav-link" href=""></a>
-                            <a class="nav-item nav-link" href=""></a>
+                            <a class="nav-item nav-link" href="practice.html">Logout</a>
                         </div>
                     </div>
                 </nav>
@@ -514,8 +514,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-1 dropdown"></div>
-            <div class="col-sm-5 dropdown chartbg">
+            <div class="col-sm-3 dropdown"></div>
+            <div class="col-sm-6 dropdown chartbg">
                 <canvas id="num_approved_a_year_by_top_ten_company" width="100%" height="100%"></canvas>
                 <script>
                     var ctx = document.getElementById('num_approved_a_year_by_top_ten_company');
@@ -675,7 +675,9 @@
                     });
                 </script>
             </div>
-            <div class="col-sm-5 dropdown chartbg">
+            </div>
+            <div class="row">
+            <div class="col-sm-12 dropdown chartbg">
                 <canvas id="num_approved_in_therapy_area_by_top_ten_company" width="100%" height="100%"></canvas>
                 <script>
                     var ctx = document.getElementById('num_approved_in_therapy_area_by_top_ten_company');
@@ -845,6 +847,7 @@
         </div>
 
     </div>
+</div>
 
 
 
