--- a/web_contents/practiceinformation.html
+++ b/web_contents/practiceinformation.html
@@ -105,7 +105,7 @@
                 <div class="col-md-6 box-container-thing">
                     <h2>Next Steps</h2>
                     <h3>Future plans for DataSource.</h3>
-                    <p>Filler text</p>
+                    <p>The next step for this project would be to scale it up. It currently handles all therapeutic areas, now the modules need to be added to handle multiple geographies by replicating the FDA PoC. The backbone has been created so with additional time modules handling other websites like the TGA could be added to build up a complete dataset of therapeutic and geographic drug approvals.</p>
                 </div>
                 <div class="col-md-6 how-img">
                     <img src="future.jpeg" class="rounded-circle img-fluid"
